--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ ul.list-reg {
 /* New css-styles for registration */
 
 .reg-list-main, .list-auth-unauthenticated li, .reg-list-main .list-auth-authenticated li  {
-    font-size: 12px;
+    font-size: 13px;
     color: #fff;
 }
 
@@ -304,7 +304,7 @@ ul.list-reg {
 }
 
 .course a, .contacthref a {
-    font-size: 12px;
+    font-size: 13px;
     color: #fff;
 }
 
@@ -313,10 +313,12 @@ ul.list-reg {
 }
 
 .reg-list-main li {
-    font-size: 12px;
+    font-size: 13px;
 }
 
-.referral-info 
+.li-user-info {
+    flex-direction: row;
+}
 
 /* --------------- Main --------------- */
 
