--- a/media.css
+++ b/media.css
@@ -206,6 +206,16 @@
     .footer-cont__telephone {
         margin: 40px auto 0;
     }
+
+    /* Registration css */
+
+    .li-user-info #user-greeting, #referral-info, .li-logout-btn #btn-logout {
+        font-size: 11px;
+    }
+
+    li #btn-registration, li #btn-login {
+        font-size: 12px;
+    }
 }
 
 @media (max-width: 500px) {
